19.1 fixed spacing between buttons

--- a/src/components/views/Tables/Tables.module.scss
+++ b/src/components/views/Tables/Tables.module.scss
@@ -32,5 +32,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 5px;
   }
 }
