--- a/src/components/views/Waiter/Waiter.module.scss
+++ b/src/components/views/Waiter/Waiter.module.scss
@@ -71,4 +71,8 @@
       font-weight: 600;
     }
   }
+
+  .buttons {
+    margin: 5px
+  }
 }
